--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.datasource.url=jdbc:mysql://springboot-db.cgrruinr6z90.ap-northeast-2.rds.amazonaws.com:3306/Board
-spring.datasource.username='???'
-spring.datasource.password='????'
+spring.datasource.username=rbals7398
+spring.datasource.password=kys700302!
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:springcoredb
+#spring.datasource.username=sa
+#?serverTimezone=Asia/Seoul url ?? ????,
